Initial setup : e-2-e request flowing; DB script loading; swagger gives 500